reusable author component

--- a/src/content/posts/chronicles-of-a-home-data-center-day-1.mdx
+++ b/src/content/posts/chronicles-of-a-home-data-center-day-1.mdx
@@ -1,36 +1,7 @@
 ---
 title: "Chronicles of a Home Data Center: Day -1 – Planning, Pitfalls & The Agile Path"
 description: "The essential planning phase before building a home data center - exploring motivations, challenges, and adopting an agile approach to avoid common pitfalls"
-author:
-  name: "Quan Nguyen"
-  bio: "
-  Hello! I'm Quan Nguyen. My greatest passion is to light the way for learners like you, helping you explore the exciting worlds of technology and business through highly practical e-learning. I truly believe that quality education shapes brighter futures, which is why I offer accessible core learning content—often curated with the help of AI to bring you the best efficiently—completely free of charge.
-
-
-
-
-
-You can always count on my integrity; I'm committed to providing unbiased guidance. That means you won't find any paid advertisements or affiliate marketing from me  – just honest support for your learning journey. I love fostering a vibrant and supportive community where we can all share, collaborate, and grow together. I encourage you to embrace your creativity, tackle challenges, and view any failures not as setbacks, but as crucial learning opportunities.
-
-
-
-
-
-Everything I am is dedicated to this educational mission, and all resources generated from my core operations are reinvested to make a lasting global impact and help cultivate future innovators and entrepreneurs.
-
-
-
-
-
-Think of me as your dedicated companion on an exciting adventure of discovery. Let's wander and grow together!
-  
-  
-  "
-  avatar: "/images/authors/skill-wanderer-avatar.jpg"
-  social:
-    linkedin: "/quan-nguyen-skill-wanderer"
-    github: "skill-wanderer"
-    website: "https://wanderings.skill-wanderer.com"
+authorId: "quan-nguyen"
 publishDate: "2025-04-06"
 category: "Home Data Center"
 readTime: "15 min read"
