--- a/src/content/posts/beyond-frameworks-computer-science-fundamentals.mdx
+++ b/src/content/posts/beyond-frameworks-computer-science-fundamentals.mdx
@@ -1,29 +1,7 @@
 ---
 title: "Beyond Frameworks: How Computer Science Fundamentals Forge the Complete Developer"
 description: "Breaking through the glass ceiling from coder to engineer by mastering Data Structures, Algorithms, and Discrete Mathematics - the foundation every developer needs"
-author:
-  name: "Quan Nguyen"
-  bio: "
-  Hello! I'm Quan Nguyen. My greatest passion is to light the way for learners like you, helping you explore the exciting worlds of technology and business through highly practical e-learning. I truly believe that quality education shapes brighter futures, which is why I offer accessible core learning content—often curated with the help of AI to bring you the best efficiently—completely free of charge.
-
-
-You can always count on my integrity; I'm committed to providing unbiased guidance. That means you won't find any paid advertisements or affiliate marketing from me  – just honest support for your learning journey. I love fostering a vibrant and supportive community where we can all share, collaborate, and grow together. I encourage you to embrace your creativity, tackle challenges, and view any failures not as setbacks, but as crucial learning opportunities.
-
-
-
-
-
-Everything I am is dedicated to this educational mission, and all resources generated from my core operations are reinvested to make a lasting global impact and help cultivate future innovators and entrepreneurs.
-
-
-
-
-
-Think of me as your dedicated companion on an exciting adventure of discovery. Let's wander and grow together!
-  
-  
-  "
-  avatar: "/images/authors/skill-wanderer-avatar.jpg"
+authorId: "quan-nguyen"
 publishDate: "2025-06-22"
 category: "The Wanderer's Playbook"
 readTime: "18 min read"
@@ -50,7 +28,7 @@ So this isn't just about Computer Science fundamentals. This is about recognizin
 
 ---
 
-If you're anything like me, you'll never forget the first time you built a real application with a modern framework.That moment when the code compiles, the server runs, and the thing you imagined on your screen comes to life… it's pure magic. You feel like you have a superpower. You can build, you can create, you are a developer.
+If you're anything like me, you'll never forget the first time you built a real application with a modern framework. That moment when the code compiles, the server runs, and the thing you imagined on your screen comes to life… it's pure magic. You feel like you have a superpower. You can build, you can create, you are a developer.
 
 I know this journey intimately. But I also know the feeling that comes next. Early in my career, I dove headfirst into a popular framework, believing it was my ticket to success. I landed an interview for an internship, confident in my ability to build. What happened? I was politely shown the door before the process could even truly begin. Why? Because when the interviewer started asking deeper questions—why things worked the way they did, how the framework managed its data, what the trade-offs were—I had no answer. I had learned the spell, but I didn't understand the magic. I had hit my first glass ceiling, and it was a humbling lesson.
 
