--- a/src/content/posts/chronicles-of-a-home-data-center-day-1.mdx
+++ b/src/content/posts/chronicles-of-a-home-data-center-day-1.mdx
@@ -51,7 +51,7 @@ For many, a home data center offers significantly enhanced data privacy and cont
 
 ### Cost-Effective 24/7 Operation & Optimized Home Internet Use:
 
-Once operational, the primary ongoing costs are electricity and your existing internet connection. Especially here in Vietnam, abundant residential bandwidth is common. This capacity is ideal for self-hosting. Furthermore, modern tools like [Cloudflare Tunnel](https://developers.cloudflare.com/cloudflare-one/connections/connect-networks/) or similar proxy/tunneling services can optimize this connection, allowing secure external access to your services even without a static IP or opening risky inbound firewall ports. These tools effectively bypass common ISP limitations while often adding a layer of security (like [DDoS protection](http://ddos_mitigation/)) and potentially improving perceived performance for external users by leveraging their global network. Running your own systems uses power and bandwidth you likely already have, optimized with smart tools.
+Once operational, the primary ongoing costs are electricity and your existing internet connection. Especially here in Vietnam, abundant residential bandwidth is common. This capacity is ideal for self-hosting. Furthermore, modern tools like [Cloudflare Tunnel](https://developers.cloudflare.com/cloudflare-one/connections/connect-networks/) or similar proxy/tunneling services can optimize this connection, allowing secure external access to your services even without a static IP or opening risky inbound firewall ports. These tools effectively bypass common ISP limitations while often adding a layer of security (like [DDoS protection](https://ddos_mitigation/)) and potentially improving perceived performance for external users by leveraging their global network. Running your own systems uses power and bandwidth you likely already have, optimized with smart tools.
 
 ### Customization and Efficient Scaling As You Need It:
 
@@ -93,7 +93,7 @@ This is far from a "plug-and-play" setup. Be prepared to invest considerable tim
 
 Your digital infrastructure has a physical footprint with tangible side effects.
 
-• **Noise**: Server fans can be loud. Using laptops or modern SBCs (like [Orange Pi 5](http://www.orangepi.org/html/hardWare/computerAndMicrocontrollers/details/Orange-Pi-5.html)) can significantly mitigate this, often being silent or very quiet. Location planning still remains important regardless.
+• **Noise**: Server fans can be loud. Using laptops or modern SBCs (like [Orange Pi 5](https://www.orangepi.org/html/hardWare/computerAndMicrocontrollers/details/Orange-Pi-5.html)) can significantly mitigate this, often being silent or very quiet. Location planning still remains important regardless.
 
 • **Heat**: All electronics generate heat. Laptops and even powerful SBCs under load are no exception, though generally less than traditional servers. Adequate ventilation is crucial to ensure hardware longevity and stability.
 
