--- a/src/content/posts/deep-dive-into-notebooklm.mdx
+++ b/src/content/posts/deep-dive-into-notebooklm.mdx
@@ -35,7 +35,7 @@ My goal isn't just listing features. As a Skill-Wanderer, I want to explore how 
 
 My colleague's interest encapsulates [NotebookLM's](https://notebooklm.google/) promise: a personal AI research assistant, expert in your own information. Its defining "source-grounding" means its knowledge is strictly limited to your uploaded documents, becoming an "instant expert" on your materials.
 
-I experienced this firsthand, as I mentioned in [Day 1](https://wanderings.skill-wanderer.com/blog/the-skill-wanderers-compass/), when it helped me make sense of that massive [Orange Pi](http://www.orangepi.org/orangepiwiki/index.php/Main_Page) manual. But it was more than just general sense-making. I was specifically trying to figure out how to install [Ubuntu](https://en.wikipedia.org/wiki/Ubuntu) on its [eMMC (embedded MultiMediaCard)](https://en.wikipedia.org/wiki/MultiMediaCard#eMMC). The seller had told me they only knew how to install it on an [SD card](https://en.wikipedia.org/wiki/SD_card), which was less ideal for performance. I'd even bought an SD card based on that, which is now, amusingly, left for nothing!
+I experienced this firsthand, as I mentioned in [Day 1](https://wanderings.skill-wanderer.com/blog/the-skill-wanderers-compass/), when it helped me make sense of that massive [Orange Pi](https://www.orangepi.org/orangepiwiki/index.php/Main_Page) manual. But it was more than just general sense-making. I was specifically trying to figure out how to install [Ubuntu](https://en.wikipedia.org/wiki/Ubuntu) on its [eMMC (embedded MultiMediaCard)](https://en.wikipedia.org/wiki/MultiMediaCard#eMMC). The seller had told me they only knew how to install it on an [SD card](https://en.wikipedia.org/wiki/SD_card), which was less ideal for performance. I'd even bought an SD card based on that, which is now, amusingly, left for nothing!
 
 Frustrated but hopeful, I fed the lengthy manual into NotebookLM and asked directly: "What are the methods to install Ubuntu on this Orange Pi model?" To my delight, NotebookLM pointed me exactly to the section detailing eMMC installation. It was a breeze to follow the instructions once I knew where they were. Without asking NotebookLM that specific question and having it search the document for me, I'm sure I would have missed that capability, relying only on the seller's limited knowledge and wasting a lot more time. That discovery alone saved me significant setup hassle and showed me the power of having a tool that can deeply query your specific sources.
 
@@ -49,7 +49,7 @@ That experience, now reinforced by my colleague's interest in the Plus version (
   class="rounded-lg shadow-lg mb-6"
 />
 
-For my main exploration this time, I decided to tackle a real beast: the "Workday Adaptive Planning Documentation." This isn't your average manual; we're talking a colossal 2721-page PDF (Workday-Adaptive-Planning-Documentation.pdf) which you can find here: http://doc.workday.com/content/dam/fmdita-outputs/pdfs/adaptive-planning/en-us/Workday-Adaptive-Planning-Documentation.pdf and see the sample below. My specific goal was to quickly get up to speed on how "model sheets" are handled within this ecosystem as it related to my [BA (Business Analyst) role](https://en.wikipedia.org/wiki/Business_analyst).
+For my main exploration this time, I decided to tackle a real beast: the "Workday Adaptive Planning Documentation." This isn't your average manual; we're talking a colossal 2721-page PDF (Workday-Adaptive-Planning-Documentation.pdf) which you can find here: https://doc.workday.com/content/dam/fmdita-outputs/pdfs/adaptive-planning/en-us/Workday-Adaptive-Planning-Documentation.pdf and see the sample below. My specific goal was to quickly get up to speed on how "model sheets" are handled within this ecosystem as it related to my [BA (Business Analyst) role](https://en.wikipedia.org/wiki/Business_analyst).
 
 <Image 
   src={sheerTotal}
