--- a/src/content/posts/home-k8s-first-day.mdx
+++ b/src/content/posts/home-k8s-first-day.mdx
@@ -19,7 +19,7 @@ import k8sIllustration from '../../../public/images/blog/home-k8s-first-day/k8s-
 
 Like many tech enthusiasts, I had capable hardware sitting partially idle. In my case, it was a trusty retired [ThinkPad T480](https://www.lenovo.com/us/en/p/laptops/thinkpad/thinkpadt/thinkpad-t480/22tp2tt4800). With its 8 Intel CPU cores, a hefty 32GB of RAM, and a spacious 500GB SSD, it's a machine that's frankly overkill for many simple tasks. But the thought of using it as just a single, monolithic server felt potentially limiting for future ambitions. What if my home lab needs expanded beyond what one machine, however powerful, could comfortably or efficiently handle? It represented untapped potential, waiting for the right challenge.
 
-The spark came unexpectedly in the form of a birthday present: an [Orange Pi 5 Plus](http://www.orangepi.org/html/hardWare/computerAndMicrocontrollers/details/Orange-Pi-5-plus-32GB.html). I was immediately struck by its specifications – 8 powerful ARM CPU cores, a matching 32GB of RAM, and a built-in 256GB of eMMC storage. Suddenly, the landscape changed. I didn't just have one capable machine; I had two, albeit with different CPU architectures (Intel x86_64 vs ARM64). The gears began turning rapidly. Could these two distinct but powerful devices form the nucleus of something more distributed and scalable?
+The spark came unexpectedly in the form of a birthday present: an [Orange Pi 5 Plus](https://www.orangepi.org/html/hardWare/computerAndMicrocontrollers/details/Orange-Pi-5-plus-32GB.html). I was immediately struck by its specifications – 8 powerful ARM CPU cores, a matching 32GB of RAM, and a built-in 256GB of eMMC storage. Suddenly, the landscape changed. I didn't just have one capable machine; I had two, albeit with different CPU architectures (Intel x86_64 vs ARM64). The gears began turning rapidly. Could these two distinct but powerful devices form the nucleus of something more distributed and scalable?
 
 Connectivity was the next consideration. Checking my internet plan showed speeds consistently around 300 Mbps. This is a great starting point, more than capable of reliably serving web traffic for initial projects like this blog without immediate limitations. Furthermore, I confirmed I always could, and fully intend to, upgrade this plan well beyond 300 Mbps down the line as my needs evolve, removing potential bandwidth concerns about future scalability.
 
