--- a/src/content/posts/the-price-of-independence.mdx
+++ b/src/content/posts/the-price-of-independence.mdx
@@ -25,7 +25,7 @@ Well, wonder no more! In this installment, we're getting down to brass tacks. I'
 
 So, if you're curious about the real-world economics of self-hosting versus relying on the cloud, you're in the right place. Let's grab our virtual magnifying glasses and investigate the numbers together!
 
-> **A Note on Transparency:** Please be aware that this blog is a personal project. I do not use affiliate marketing links or display any advertisements. All mentions of products, services, or companies (such as [AWS](https://en.wikipedia.org/wiki/Amazon_Web_Services), [Hostinger](https://www.hostinger.com/), [Orange Pi](http://www.orangepi.org/), [ThinkPad](https://en.wikipedia.org/wiki/ThinkPad), etc.) are based purely on my own research, personal experiences, and opinions, and I receive no financial compensation or benefit from these mentions.
+> **A Note on Transparency:** Please be aware that this blog is a personal project. I do not use affiliate marketing links or display any advertisements. All mentions of products, services, or companies (such as [AWS](https://en.wikipedia.org/wiki/Amazon_Web_Services), [Hostinger](https://www.hostinger.com/), [Orange Pi](https://www.orangepi.org/), [ThinkPad](https://en.wikipedia.org/wiki/ThinkPad), etc.) are based purely on my own research, personal experiences, and opinions, and I receive no financial compensation or benefit from these mentions.
 
 
 ## The Bill Arrives: Tallying Up One Month of My Home Data Center
