--- a/src/content/posts/the-skill-wanderers-compass.mdx
+++ b/src/content/posts/the-skill-wanderers-compass.mdx
@@ -52,7 +52,7 @@ My personal hunch is that this literacy will increasingly involve learning how t
 
 But theory needs practice. So, where have my wanderings taken me so farin actually using these AI tools? My background is primarily as a developer, but I often wear BA, PM, and test automation hats, so my experiments tend to reflect that blend, mostly focusing on software development and related tasks, but sometimes wandering further. Here's a snapshot of my initial forays:
 
-• **Tackling Dense Docs with [NoteBookLM](https://notebooklm.google.com/)**: One of my first really practical uses was feeding the massive, hundreds-of-pages user guide for my [Orange Pi](http://www.orangepi.org/) into [NoteBookLM](https://notebooklm.google.com/). Being able to ask specific questions and get relevant info pulled out instantly, instead of scrolling endlessly, was a game-changer for getting that hardware set up.
+• **Tackling Dense Docs with [NoteBookLM](https://notebooklm.google.com/)**: One of my first really practical uses was feeding the massive, hundreds-of-pages user guide for my [Orange Pi](https://www.orangepi.org/) into [NoteBookLM](https://notebooklm.google.com/). Being able to ask specific questions and get relevant info pulled out instantly, instead of scrolling endlessly, was a game-changer for getting that hardware set up.
 
 • **"Vibe Mockups" (Getting Ideas Visual)**: I've been playing with what I call "Vibe Mockups" – trying to go from a rough idea in my head to a visual quickly. Tools like [Loveable.dev](https://lovable.dev/), sometimes prompted with help from [GitHub Copilot](https://github.com/features/copilot), have been interesting for generating initial UI/UX ideas almost intuitively.
 
@@ -92,7 +92,7 @@ Therefore, my firm intention is for all the course content I eventually create a
 
 I'm happy to report the basic platform is up and running! And for those who followed my "Chronicles of a Home Data Center" series, you might remember my goal of leveraging free-tier and self-hosted solutions. True to that spirit, this Moodle instance is actually running on my home Kubernetes (k8s) cluster, built largely on resources I already had or could access freely. My philosophy here is simple: keep the operational costs as close to zero as possible. This isn't just about the technical challenge; it directly supports the mission. By minimizing costs, I can genuinely commit to making the learning content accessible to everyone, without potential financial barriers down the line.
 
-While the courses themselves are still just ideas swirling in my head, you can check out the live platform (though it's pretty empty right now!) at: [Skill-Wanderer Dojo](http://dojo.skill-wanderer.com/)
+While the courses themselves are still just ideas swirling in my head, you can check out the live platform (though it's pretty empty right now!) at: [Skill-Wanderer Dojo](https://dojo.skill-wanderer.com/)
 
 Now, I know I might have mentioned plans for specific AI courses here in previous posts "Before We Continue 'Chronicles of a Home Data Center': Let's Talk AI Skills". However, planning course content in the AI space right now feels particularly challenging. The tide of AI is changing so incredibly fast that any course detailing specific tools or step-by-step processes runs a serious risk of being outdated the moment it's published. Given my goal is to provide lasting value and accessibility, this rapid pace has given me pause. As a result, I'm putting some serious thought into what the first course should actually be. Maybe focusing on more durable foundational concepts, adaptable workflows, prompt engineering principles, or even the meta-skill of how to learn and evaluate AI tools might be more beneficial long-term than a deep dive into a tool that could change dramatically next month.
 
