add external link

--- a/src/content/posts/the-modern-tech-professionals-learning-stack-a-2025-guide.mdx
+++ b/src/content/posts/the-modern-tech-professionals-learning-stack-a-2025-guide.mdx
@@ -13,7 +13,7 @@ tags: ["Learning", "Professional Development", "Udemy", "Pluralsight", "LinkedIn
 
 You've heard the headlines and the growing anxiety in the workplace: "AI is coming for your job." It's a powerful narrative, but it misses the real story. I don't believe AI will replace you. However, I am convinced that a professional who knows how to leverage AI will replace one who doesn't. This isn't a future threat; it's the new reality across the entire tech landscape as of today, Friday, June 27, 2025, and it makes continuous learning more critical than ever.
 
-For developers, this means using tools like GitHub Copilot to accelerate coding. For project managers, it means using AI to forecast timelines and allocate resources. For business analysts, it means leveraging AI to uncover deeper insights from data. The World Economic Forum's latest "Future of Jobs" report underscores this, predicting that a staggering 44% of core job skills will be disrupted in the next five years. The need to upskill is universal.
+For developers, this means using tools like [GitHub Copilot](https://github.com/features/copilot) to accelerate coding. For project managers, it means using AI to forecast timelines and allocate resources. For business analysts, it means leveraging AI to uncover deeper insights from data. The [World Economic Forum's latest "Future of Jobs" report](https://www.weforum.org/publications/the-future-of-jobs-report-2023/) underscores this, predicting that a staggering 44% of core job skills will be disrupted in the next five years. The need to upskill is universal.
 
 As someone with professional experience as a developer, a project manager, and a business analyst, I've seen this shift from all sides. That's why I've created this guide. This is the first in an eight-part series designed to be a no-nonsense look at the top learning platforms from a holistic tech team perspective. We'll cut through the marketing fluff and focus on what truly builds practical, job-relevant skills.
 
@@ -29,7 +29,7 @@ Our industry moves at a breathtaking speed. A new analytics tool, a new project 
 
 ### Building "T-Shaped" Professionals and Teams
 
-Modern tech organizations thrive on "T-shaped" individuals. This model represents a professional who has deep, expert knowledge in one core area (the vertical bar of the "T") and a broad, functional knowledge across many other domains (the horizontal bar). A team of T-shaped people is adaptable, collaborative, and breaks down silos.
+Modern tech organizations thrive on ["T-shaped" individuals](https://en.wikipedia.org/wiki/T-shaped_skills). This model represents a professional who has deep, expert knowledge in one core area (the vertical bar of the "T") and a broad, functional knowledge across many other domains (the horizontal bar). A team of T-shaped people is adaptable, collaborative, and breaks down silos.
 
 **The Vertical Bar (Depth):** This is your core competency. For a developer, it's a programming language. For a PM, it's risk management and resource planning. For a BA, it's requirements elicitation and data modeling.
 
@@ -62,6 +62,8 @@ Now, let's meet the platforms that will form the core of our learning stack. Eac
 
 **Key Weakness:** The platform lacks a good structure for prerequisites; you often only realize what you're missing midway through a course. Also, to appeal to everyone, many good courses tend to be far longer than necessary, filled with content you may not need.
 
+[Visit Udemy →](https://www.udemy.com)
+
 ### Pluralsight (with A Cloud Guru): The Professional's Gym
 
 **Core Identity:** The premium subscription for serious tech skill development.
@@ -71,6 +73,8 @@ Now, let's meet the platforms that will form the core of our learning stack. Eac
 **Ideal User:** Primarily developers and infrastructure engineers, but also invaluable for tech-savvy PMs and BAs who need to deeply understand the architecture of the products they manage.
 
 **Key Weakness:** The library for non-coding skills is less extensive. Furthermore, its learning paths, which string together courses from different instructors, can have significant content overlap, making for a less streamlined experience than a single, cohesive program.
+
+[Visit Pluralsight →](https://www.pluralsight.com)
 
 ### LinkedIn Learning: The Corporate Trainer
 
@@ -82,6 +86,8 @@ Now, let's meet the platforms that will form the core of our learning stack. Eac
 
 **Key Weakness:** Technical courses are often less in-depth than on specialized platforms.
 
+[Visit LinkedIn Learning →](https://www.linkedin.com/learning)
+
 ### DataCamp: The Interactive Data Lab
 
 **Core Identity:** The specialist platform laser-focused on the world of data.
@@ -91,6 +97,8 @@ Now, let's meet the platforms that will form the core of our learning stack. Eac
 **Ideal User:** Aspiring Data Scientists, Data Engineers, Business Analysts, and any professional who needs to become proficient with data.
 
 **Key Weakness:** While excellent for practical skills, the depth of the underlying theory is not as strong as what you would find in a university-level course on a platform like Coursera.
+
+[Visit DataCamp →](https://www.datacamp.com)
 
 ### Coursera: The Digital University
 
@@ -102,6 +110,8 @@ Now, let's meet the platforms that will form the core of our learning stack. Eac
 
 **Key Weakness:** It is the most expensive of all the platforms. In my experience, the courses often need to be supplemented with other materials for a complete understanding; Coursera alone may not give you full working knowledge.
 
+[Visit Coursera →](https://www.coursera.org)
+
 ### Codecademy: The Coding Sandbox
 
 **Core Identity:** The interactive learning environment designed to get you writing code from minute one.
@@ -112,9 +122,11 @@ Now, let's meet the platforms that will form the core of our learning stack. Eac
 
 **Key Weakness:** The hand-holding approach is too basic for experienced developers or those in non-coding roles.
 
+[Visit Codecademy →](https://www.codecademy.com)
+
 ### A Note on Other Platforms (Udacity & edX)
 
-I'm well aware that other excellent platforms exist, such as Udacity and edX. I've intentionally excluded them from this primary comparison because their much higher cost (often running from several hundred to a few thousand dollars) puts them in a different category, closer to a bootcamp-style investment. This guide is focused on the more accessible platforms for your day-to-day learning stack.
+I'm well aware that other excellent platforms exist, such as [Udacity](https://www.udacity.com) and [edX](https://www.edx.org). I've intentionally excluded them from this primary comparison because their much higher cost (often running from several hundred to a few thousand dollars) puts them in a different category, closer to a bootcamp-style investment. This guide is focused on the more accessible platforms for your day-to-day learning stack.
 
 ## 4. The At-a-Glance Comparison Table
 
@@ -135,7 +147,7 @@ Theory and comparison tables are useful, but real-world application is what matt
 
 ### Goal: Mastering Data Skills (for BA/Data Science Roles)
 
-**Primary (Theory):** Coursera. I start with a well-structured Specialization here, like the Google Data Analytics Professional Certificate, to understand the foundational concepts and methodologies.
+**Primary (Theory):** Coursera. I start with a well-structured Specialization here, like the [Google Data Analytics Professional Certificate](https://www.coursera.org/professional-certificates/google-data-analytics), to understand the foundational concepts and methodologies.
 
 **Secondary (Practice):** DataCamp. As I learn the theory on Coursera, I use DataCamp's interactive exercises to build the practical, hands-on muscle memory for Python, Pandas, and SQL. The two complement each other perfectly.
 
@@ -157,7 +169,7 @@ Theory and comparison tables are useful, but real-world application is what matt
 
 ### Goal: Mastering Project Management or BA Skills
 
-**Primary (Structure & Certification):** Coursera. For a formal path, I begin with a recognized program like the Google Project Management or IBM Business Analyst Professional Certificate. This builds a strong, foundational framework.
+**Primary (Structure & Certification):** Coursera. For a formal path, I begin with a recognized program like the [Google Project Management](https://www.coursera.org/professional-certificates/google-project-management) or [IBM Business Analyst Professional Certificate](https://www.coursera.org/professional-certificates/ibm-business-analyst-professional-certificate). This builds a strong, foundational framework.
 
 **Secondary (Breadth & Soft Skills):** LinkedIn Learning. While Coursera provides the core, I use LinkedIn Learning to fill in the gaps and add breadth. I'll search for specific courses on stakeholder management, advanced negotiation tactics, or different Agile flavors to become a more well-rounded and effective leader.
 
