--- a/src/content/posts/the-modern-tech-professionals-learning-stack-a-2025-guide.mdx
+++ b/src/content/posts/the-modern-tech-professionals-learning-stack-a-2025-guide.mdx
@@ -147,7 +147,7 @@ Theory and comparison tables are useful, but real-world application is what matt
 
 ### Goal: Mastering Data Skills (for BA/Data Science Roles)
 
-**Primary (Theory):** Coursera. I start with a well-structured Specialization here, like the [Google Data Analytics Professional Certificate](https://www.coursera.org/professional-certificates/google-data-analytics), to understand the foundational concepts and methodologies.
+**Primary (Theory):** Coursera. I start with a well-structured Specialization here, like the [Google Data Analytics Professional Certificate](https://www.coursera.org/professional-certificates/google-data-analytics) or [IBM Data Science Professional Certificate](https://www.coursera.org/professional-certificates/ibm-data-science), to understand the foundational concepts and methodologies.
 
 **Secondary (Practice):** DataCamp. As I learn the theory on Coursera, I use DataCamp's interactive exercises to build the practical, hands-on muscle memory for Python, Pandas, and SQL. The two complement each other perfectly.
 
