--- a/src/content/posts/the-modern-tech-professionals-learning-stack-a-2025-guide.mdx
+++ b/src/content/posts/the-modern-tech-professionals-learning-stack-a-2025-guide.mdx
@@ -19,6 +19,12 @@ As someone with professional experience as a developer, a project manager, and a
 
 Most importantly, we will embrace the concept of a "Learning Stack." The era of relying on a single source for knowledge is over. The modern tech professional needs a versatile, curated toolkit of different platforms for different tasks. This post is your high-level map of the terrain. In the coming weeks, we will dive deep into each platform individually.
 
+---
+
+**Disclaimer:** I am not affiliated with, sponsored by, or receiving any compensation from any of the learning platforms mentioned in this post (Udemy, Pluralsight, LinkedIn Learning, DataCamp, Coursera, or Codecademy). All opinions and recommendations are my own, based on personal experience and research. I have no financial relationships with these companies.
+
+---
+
 ## 2. Why You Need a "Learning Stack," Not a Single Platform
 
 The idea of a "stack" is second nature to developers, but the principle applies to everyone in a tech team. Relying on a single learning platform is like a PM trying to manage every project with the same rigid waterfall methodology; it's inefficient and guarantees failure. Here's why a multi-platform approach is non-negotiable in 2025.
